--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   flex-direction: row;
   flex-flow: wrap;
   margin: 5px;
+  margin-left: 100px;
   padding: 5px;
   padding-top: 100px;
   column-gap: 30px;
